# PiPinPP

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_STANDARDS.md  CONTRIBUTING.md  Doxyfile  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  TODO.md  build.sh  coverage.sh  install.sh  test_arduino.cpp
.github/: CONTRIBUTING.md  LABELS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  feature_request.md  hardware_support.md  performance_issue.md  platform_report.md  platform_support.md  roadmap_feature.md
.github/workflows/: changelog.yml  ci.yml  docs.yml  documentation.yml  format-check.yml  issue-responses.yml  label-issues.yml  pr-checks.yml  project-automation.yml  release.yml  stale.yml  sync-wiki.yml
assets/: README.md
bindings/python/: MANIFEST.in  README.md  pypipinpp.cpp  pyproject.toml  setup.py
bindings/python/examples/: blink.py  button.py  fade.py  i2c_scanner.py  interrupt.py
cmake/: PiPinPPConfig.cmake.in  pipinpp.pc.in
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/include/: ArduinoCompat.hpp.func-sort-c.html  ArduinoCompat.hpp.func.html  ArduinoCompat.hpp.gcov.html  event_pwm.hpp.func-sort-c.html  event_pwm.hpp.func.html  event_pwm.hpp.gcov.html  exceptions.hpp.func-sort-c.html  exceptions.hpp.func.html  exceptions.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  interrupts.hpp.func-sort-c.html  interrupts.hpp.func.html  interrupts.hpp.gcov.html  platform.hpp.func-sort-c.html  platform.hpp.func.html  platform.hpp.gcov.html  pwm.hpp.func-sort-c.html  pwm.hpp.func.html  pwm.hpp.gcov.html
coverage/src/: ArduinoCompat.cpp.func-sort-c.html  ArduinoCompat.cpp.func.html  ArduinoCompat.cpp.gcov.html  HardwarePWM.cpp.func-sort-c.html  HardwarePWM.cpp.func.html  HardwarePWM.cpp.gcov.html  SPI.cpp.func-sort-c.html  SPI.cpp.func.html  SPI.cpp.gcov.html  Serial.cpp.func-sort-c.html  Serial.cpp.func.html  Serial.cpp.gcov.html  Wire.cpp.func-sort-c.html  Wire.cpp.func.html  Wire.cpp.gcov.html  event_pwm.cpp.func-sort-c.html  event_pwm.cpp.func.html  event_pwm.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  interrupts.cpp.func-sort-c.html  interrupts.cpp.func.html  interrupts.cpp.gcov.html  pin.cpp.func-sort-c.html  pin.cpp.func.html  pin.cpp.gcov.html  platform.cpp.func-sort-c.html  platform.cpp.func.html  platform.cpp.gcov.html  pwm.cpp.func-sort-c.html  pwm.cpp.func.html  pwm.cpp.gcov.html
docs/: API_REFERENCE.md  BECOMING_NUMBER_ONE.md  BUILD.md  CLI_USAGE.md  CODE_STANDARDS.md  DEVELOPER.md  DOCUMENTATION.md  Doxyfile  FAQ.md  GETTING_STARTED.md  GITHUB_PAGES_SETUP.md  INSTALL.md  PERMISSIONS.md  PIN_NUMBERING.md  PLATFORMS.md  PLATFORM_SUPPORT.md  PRECOMMIT.md  PWM_MIGRATION.md  ROADMAP.md  SELF_HOSTED_RUNNER.md  TESTING.md  TROUBLESHOOTING.md  WIKI_HOME.md  _Sidebar.md
docs/html/: API__REFERENCE_8md.html  ArduinoCompat_8cpp.html  ArduinoCompat_8cpp.js  ArduinoCompat_8cpp_source.html  ArduinoCompat_8hpp.html  ArduinoCompat_8hpp.js  ArduinoCompat_8hpp_source.html  README_8md.html  annotated.html  annotated_dup.js  classGpioAccessError-members.html  classGpioAccessError.html  classGpioAccessError.js  classInterruptManager-members.html  classInterruptManager.html  classInterruptManager.js  classInvalidPinError-members.html  classInvalidPinError.html  (+66 more)
doxygen/: API__REFERENCE_8md.html  ArduinoCompat_8cpp.html  ArduinoCompat_8cpp.js  ArduinoCompat_8cpp_source.html  ArduinoCompat_8hpp.html  ArduinoCompat_8hpp.js  ArduinoCompat_8hpp_source.html  HardwarePWM_8cpp.html  HardwarePWM_8cpp_source.html  HardwarePWM_8hpp.html  HardwarePWM_8hpp.js  HardwarePWM_8hpp_source.html  README_8md.html  SPI_8cpp.html  SPI_8cpp_source.html  SPI_8hpp.html  SPI_8hpp.js  SPI_8hpp_source.html  Serial_8cpp.html  Serial_8cpp.js  Serial_8cpp_source.html  Serial_8hpp.html  Serial_8hpp.js  Serial_8hpp_source.html  Wire_8cpp.html  Wire_8cpp_source.html  Wire_8hpp.html  Wire_8hpp.js  Wire_8hpp_source.html  _2home_2larry_2Development_2PiPinPP_2include_2ArduinoCompat_8hpp-example.html  _2home_2runner_2work_2PiPinPP_2PiPinPP_2include_2ArduinoCompat_8hpp-example.html  _2home_2runner_2work_2PiPinPP_2PiPinPP_2include_2SPI_8hpp-example.html  _2home_2runner_2work_2PiPinPP_2PiPinPP_2include_2Wire_8hpp-example.html  _2home_2runner_2work_2PiPinPP_2PiPinPP_2include_2platform_8hpp-example.html  annotated.html  annotated_dup.js  classGpioAccessError-members.html  classGpioAccessError.html  classInterruptManager-members.html  classInterruptManager.html  (+119 more)
examples/robot_stress_test/: CMakeLists.txt  README.md  main.cpp
include/: ArduinoCompat.hpp  HardwarePWM.hpp  SPI.hpp  Serial.hpp  Wire.hpp  event_pwm.hpp  exceptions.hpp  interrupts.hpp  log.hpp  pin.hpp  platform.hpp  pwm.hpp
release_notes/: README.md  v0.2.0.md  v0.3.1.md  v0.3.10.md  v0.3.11.md  v0.3.12.md  v0.3.13.md  v0.3.2.md  v0.3.3.md  v0.3.4.md  v0.3.5.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.3.9.md  v0.4.0.md
scripts/: README.md  build.sh  check_markdown_links.py  create_issues_v0_3_0.sh  install.sh  run_examples.sh  sync_wiki.sh
src/: ArduinoCompat.cpp  HardwarePWM.cpp  SPI.cpp  Serial.cpp  Wire.cpp  event_pwm.cpp  interrupts.cpp  pin.cpp  platform.cpp  pwm.cpp
tests/: demo_conflicts.cpp  gtest_advanced_io.cpp  gtest_arduino_compat_extended.cpp  gtest_arduino_final.cpp  gtest_event_pwm.cpp  gtest_exceptions.cpp  gtest_hardware_pwm.cpp  gtest_hardware_pwm_extended.cpp  gtest_interrupts.cpp  gtest_interrupts_extended.cpp  gtest_pin.cpp  gtest_platform.cpp  gtest_platform_extended.cpp  gtest_pwm_extended.cpp  gtest_pwm_spi_final.cpp  gtest_serial.cpp  gtest_serial_extended.cpp  gtest_serial_final.cpp  gtest_spi.cpp  gtest_spi_extended.cpp  gtest_timing.cpp  gtest_ultra_final.cpp  gtest_wire.cpp  test  test.cpp  test_exceptions.cpp  test_pin_queries.cpp  test_thread_safety.cpp  test_timing.cpp
tools/: pipinpp.cpp
(+229 files in other folders)
